docs: 数据结构上, 新增 "找出数组中和为 n 的两个元素" 文档

--- a/Node2/数据结构和算法-上.md
+++ b/Node2/数据结构和算法-上.md
@@ -908,3 +908,175 @@ describe('二分法查找', () => {
 })
 ```
 
+### 5. 性能测试
+
+```typescript
+// 较真来说，循环和递归哪个更快（循环 - 不是数量级）
+const arr = [10, 20, 30, 40, 50]
+
+console.time('binarySearch1')
+for (let i = 0; i < 100 * 10000; i++) {
+    binarySearch1(arr, 40)
+}
+console.timeEnd('binarySearch1')  // 11.32ms
+
+console.time('binarySearch2')
+for (let i = 0; i < 100 * 10000; i++) {
+    binarySearch2(arr, 40)
+}
+console.timeEnd('binarySearch2')  // 15.48ms
+
+// 调用函数也有开销
+```
+
+### 6. 划重点
+
++ 凡有序，必二分！！！
++ 凡二分，时间复杂度必包含 O(logn) ！！！
++ 递归 vs 非递归
+
+------
+
+
+
+## 九、找出数组中和为 n 的两个元素
+
+### 1. 题目
+
++ 有一个 **递增** 的数组 [1, 2, 4, 7, 11, 15] 和 n = 15
++ 数组中有 **两个数** 和是 n ，即 4 + 11 === 15
++ 写一个 js 函数，找出这两个数
+
+### 2. 常规思路
+
++ 嵌套循环，找到一个数，然后去遍历下一个数，求和，判断
+
++ 时间复杂度是 O(n^2) ，不可用
+
+  ```typescript
+  /**
+   * 嵌套循环查找两数之和
+   * @param arr arr
+   * @param n n
+   */
+  function findNumbers1(arr: number[], n: number): number[] {
+      const len = arr.length;
+      const result: number[] = []
+      if (len === 0) return arr
+      // O(n^2)
+      for (let i = 0; i < len - 1; i++) {
+          let flag = false
+          const n1 = arr[i]
+          for (let j = i + 1; j < len; j++) {
+              const n2 = arr[j]
+              if (n1 + n2 === n) {
+                  result.push(n1)
+                  result.push(n2)
+                  flag = true
+                  break
+              }
+          }
+          if (flag) break
+      }
+      return result
+  }
+  ```
+
+### 3. 解题思路
+
++ 利用递增（有序）的特性
+  1. 首尾找两个数
+  2. 如果和大于 n ，则需要向前寻找
+  3. 如果和小于 n ，则需要向后寻找 - 二分法思想
+
+![image-20220302194628080](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220302194628080.png)
+
++ 双指针，时间复杂度降低到 O(n)
+  1. 定义 i 指向头，j 指向尾，求 arr[i] + arr[j]
+  2. 如果大于 n，则 j 需要向前移动
+  3. 如果小于 n，则 i 需要向后移动
+
+### 4. 代码
+
+```typescript
+/**
+ * 双指针查找两数之和
+ * @param arr
+ * @param n
+ */
+export function findNumbers2(arr: number[], n: number): number[] {
+    const res: number[] = []
+    const len = arr.length
+    if (!len) return []
+    let i = 0  // 头指针
+    let j = len - 1  // 尾指针
+    while (i < j) {
+        const n1 = arr[i]
+        const n2 = arr[j]
+        const sum = n1 + n2
+        if (sum > n) {
+            // sum 大于 n, 则 j 需要向前移动
+            j--
+        } else if (sum < n) {
+            // sum 小于 n, 则 j 需要向后移动
+            i++
+        } else {
+            // 相等
+            res.push(n1)
+            res.push(n2)
+            break
+        }
+    }
+    return res
+}
+```
+
+### 5. 单元测试
+
+```typescript
+/**
+ * @description 找出数组中和为 n 的两个元素
+ * @author lzz
+ */
+import {findNumbers1, findNumbers2} from './7. 找出数组中和为 n 的两个元素'
+
+const arr = [1, 2, 4, 7, 11, 15]
+
+describe("找出数组中和为 n 的两个元素", () => {
+    it('正常情况下', () => {
+        expect(findNumbers2(arr, 15)).toEqual([4, 11])
+    })
+
+    it('数组为空', () => {
+        expect(findNumbers2([], 15)).toEqual([])
+    })
+
+    it('找不到情况下', () => {
+        expect(findNumbers2(arr, 100)).toEqual([])
+    })
+})
+```
+
+### 6. 性能测试
+
+```typescript
+const array: number[] = [1, 2, 4, 7, 11, 15]
+
+console.time('findNumbers1')
+for (let i = 0; i < 100 * 10000; i++) {
+    findNumbers1(array, 15)
+}
+console.timeEnd('findNumbers1')  // 42.23ms
+
+console.time('findNumbers2')
+for (let i = 0; i < 100 * 10000; i++) {
+    findNumbers2(array, 15)
+}
+console.timeEnd('findNumbers2')  // 28.82ms
+```
+
+### 7. 划重点
+
++ 时间复杂度达到 O(n^2) ，是不可用的算法
++ 凡有序，必二分！！！
++ 优化嵌套循环，可以考虑 “双指针”
