docs: 更新"数据结构下"文档, 为何二叉树如此重要，而不是其他叉树

--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -160,3 +160,38 @@ describe('二叉搜索树第 k 小值', () => {
 + 二叉树，和三种（前序、中序、后序）遍历
 + 二叉搜索树的特点：left <= root; right >= root
 + 二叉搜索树的价值：可使用 **二分法** 进行快速查找
+
+------
+
+
+
+## 二、为何二叉树如此重要，而不是其他叉树
+
+### 1. 性能、性能还是性能
+
++ 数组：查询快 O(1)，增删慢 O(n)
++ 链表：查询慢 O(n)，增删快 O(1)
++ 二叉搜索树 BST：查询快，增删快 -- “ 木桶效应 ”
+
+### 2. 平衡二叉树
+
++ BST 如果不平衡，那就又成了链表了
++ 所有要尽量平衡：平衡二叉搜索树 BBST
++ BBST 增删查，时间复杂度都是 O(logn)，即树的高度
+
+### 3. 红黑树
+
++ 一种自平衡二叉树
++ 分为 红/黑 两种颜色，通过颜色转换来维持树的平衡
++ 相对于普通平衡二叉树，它维持平衡的效率更高
+
+### 4. B 树
+
++ 物理上是多叉树，但逻辑上是二叉树
++ 一般用于高效 I/O，关系型数据库常用于 B树来组织数据
+
+### 5. 小结
+
++ 数组、链表，各有各的缺点
++ 特定的二叉树（ BBST ）可以让整体效果最优
++ 各种高级二叉树，继续优化，满足不同场景
