docs: 更新"数据结构下"文档, 堆有什么特点，和二叉树有什么关系

--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -195,3 +195,49 @@ describe('二叉搜索树第 k 小值', () => {
 + 数组、链表，各有各的缺点
 + 特定的二叉树（ BBST ）可以让整体效果最优
 + 各种高级二叉树，继续优化，满足不同场景
+
+------
+
+
+
+## 三、堆有什么特点，和二叉树有什么关系
+
+### 1. 堆栈模型
+
++ JS 代码执行时
++ 值类型变量，存储在栈
++ 引用类型变量，存储在堆
+
+### 2. 堆
+
++ 完全二叉树
++ 最大堆：父节点 >= 子节点
++ 最小堆：父节点 <= 子节点
+
+![image-20220304155216716](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220304155216716.png)
+
+![image-20220304155342072](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220304155342072.png)
+
+### 3. 逻辑结构 vs 物理结构
+
++ 堆，**逻辑结构** 是一棵二叉树
++ 但它 **物理结构** 是一个数组
++ 数组：适合连续存储 + 节省空间（ 回顾堆栈模型 ）
+
+### 4. 堆 vs BST
+
++ 查询比 BST 慢
++ 增删比 BST 快，维持平衡更快
++ 但整体的时间复杂度都在 O(logn) 级别，即树的高度
+
+### 5. 堆的使用场景
+
++ 特别适合 “ 堆栈模型 ”
++ 堆的数据，都是在栈中引用的，不需要从 root 遍历
++ 堆恰巧是数组形式，根据栈的地址，可用 O(1) 找到目标
+
+### 6. 小结
+
++ 堆栈模型，堆的场景
++ 堆的特点，堆和 BST
++ 堆的逻辑结构和物理结构
