docs: 更新"数据结构下"文档, 求斐波那契数列的第n值

--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -241,3 +241,106 @@ describe('二叉搜索树第 k 小值', () => {
 + 堆栈模型，堆的场景
 + 堆的特点，堆和 BST
 + 堆的逻辑结构和物理结构
+
+------
+
+
+
+## 四、求斐波那契数列第 n 个值
+
+### 1. 题目
+
++ 用 JS 计算斐波那契数列的第 n 个值
++ 注意时间复杂度
+
+### 2. 解题思路
+
++ f(0) = 0
++ f(1) = 1
++ f(n) = f(n - 1) + f(n - 2)
+
+### 3. 代码（递归，不可用）
+
+```typescript
+/**
+ * @description 求斐波那契数列第 n 个值
+ * @author lzz
+ */
+
+/**
+ * 斐波那契数列第 n 个值（递归）
+ * @param n
+ */
+function fibonacci(n: number): number {
+    if (n <= 0) return 0
+    if (n === 1) return 1
+    return fibonacci(n - 1) + fibonacci(n - 2)
+}
+```
+
+### 4. 分析
+
++ 递归 - 大量的重复计算！
++ 时间复杂度是 O(2^n)
+
+![image-20220304165030268](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220304165030268.png)
+
+### 5. 优化
+
++ 不用递归，用循环
++ 记录中间结果
++ 时间复杂度为 O(n)
+
+### 6. 代码（循环）
+
+```typescript
+/**
+ * 斐波那契数列第 n 个值 (循环)
+ * @param n
+ */
+function fibonacci(n: number): number {
+    if (n <= 0) return 0
+    if (n === 1) return 1
+    let n1 = 1  // 记录 n - 1 的结果
+    let n2 = 0  // 记录 n - 2 的结果
+    let res = 0
+    // 要从 2 开始循环
+    for (let i = 2; i <= n; i++) {
+        res = n1 + n2
+        // 记录中间结果
+        n2 = n1
+        n1 = res
+    }
+    return res
+}
+```
+
+### 7. 单元测试
+
+```typescript
+/**
+ * @description 求斐波那契数列的第n值
+ * @author lzz
+ */
+
+import {fibonacci} from './9.求斐波那契数列的第n值'
+
+describe('求斐波那契数列的第n值', () => {
+    it('0 和 1', function () {
+        expect(fibonacci(0)).toBe(0)
+        expect(fibonacci(1)).toBe(1)
+    });
+    it('除 0 和 1 外, 正常情况', function () {
+        expect(fibonacci(9)).toBe(34)
+    });
+    it('n 小于 0', function () {
+        expect(fibonacci(-1)).toBe(0)
+    });
+})
+```
+
+### 8. 动态规划
+
++ 把一个大问题，拆解成多个小问题，逐级向下拆解
++ 用递归的思路去分析问题，再改为循环来实现
++ 算法三大思维：贪心、二分、动态规划
