docs: 更新"数据结构下"文档, 青蛙跳台阶有几种方式

--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -344,3 +344,25 @@ describe('求斐波那契数列的第n值', () => {
 + 把一个大问题，拆解成多个小问题，逐级向下拆解
 + 用递归的思路去分析问题，再改为循环来实现
 + 算法三大思维：贪心、二分、动态规划
+
+------
+
+
+
+## 五、（连环问）青蛙跳台阶有几种方式
+
+### 1. 题目
+
++ 一只青蛙，一次可以跳 1 级，也可以跳 2 级
++ 问：青蛙跳到 n 级台阶，总共有多少种方式？
+
+### 2. 用动态规划分析问题
+
++ 要跳到 1 级台阶，就 1 种方式 f(1) = 1
++ 要跳到 2 级台阶，就 2 种方式 f(2) = 2
++ 要跳到 n 级台阶，f(n) = f(n - 1) + f(n - 2)
+
+![iShot2022-03-04 17.40.47](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/iShot2022-03-04%2017.40.47.jpg)
+
++ 和斐波那契数列完全一样
+
