--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -366,3 +366,147 @@ describe('求斐波那契数列的第n值', () => {
 
 + 和斐波那契数列完全一样
 
+------
+
+
+
+## 六、移动 0 到数组的末尾
+
+### 1. 题目
+
++ 如输入 [1, 0, 3, 0, 11, 0] ，输出 [1, 3, 11, 0, 0, 0]
++ 只移动 0 ，其他顺序不变
++ 必须在原数组进行操作
+
+### 2. 如果不限制 “ 必须在原数组操作 ”
+
++ 定义 part1 part2 两个数组
++ 遍历数组，非 0 push 到 part1 ，0 push 到 part2
++ 返回 part1.concat(part2)
+
+### 3. 传统思路
+
++ 遍历数组，遇到 0 则 push 到数组结尾
++ 用 splice 截取掉当前元素
++ 时间复杂度是 O(n^2) -- 算法不可用
+
+### 4. 代码（传统思路）
+
+```typescript
+/**
+ * @description 移动 0 到数组末尾
+ * @author lzz
+ */
+const array = [1, 0, 1, 1, 0, 0, 1]
+/**
+ * 移动 0 到数组末尾 (传统思路: 嵌套循环)
+ * @param arr number arr
+ */
+function moveZero1(arr: number[]): void {
+    const len = arr.length
+    if (!len) return
+    let zeroLen = 0
+  // O(n^2)
+    for (let i = 0; i < len - zeroLen; i++) {
+        if (arr[i] === 0) {
+            arr.push(0)
+            arr.splice(i, 1)  // 本身就有 O(n)
+            i--  // 数组截取了一个元素, i 要递减, 否则遇到连续 0 会有错误
+            zeroLen++  // 累计 0 的长度
+        }
+    }
+    return
+}
+```
+
+### 5. 双指针代码思路
+
++ 定义 j 指向第一个 0 ，i 指向 j 后面的第一个非 0
++ 交换 i 和 j 的值，继续向后移动
++ 只遍历一次，所以时间复杂度是 O(n)
+
+### 6. 代码（双指针）
+
+```typescript
+/**
+ * 移动 0 到数组末尾 (双指针)
+ * @param arr
+ */
+function moveZero2(arr: number[]): void {
+    const len = arr.length
+    if (!len) return
+    let i
+    let j = -1  // 指向第一个 0
+    for (i = 0; i < len; i++) {
+        if (arr[i] === 0) {
+            // 第一个 0
+            if (j < 0) {
+                j = i
+            }
+        }
+        if (arr[i] !== 0 && j !== -1) {
+            // 交换
+            const temp = arr[i]
+            arr[i] = arr[j]
+            arr[j] = temp
+            j++
+        }
+    }
+}
+```
+
+### 7. 单元测试
+
+```typescript
+/**
+ * @description 移动 0 到数组末尾
+ * @author lzz
+ */
+import {moveZero1, moveZero2} from "./10.移动 0 到数组末尾";
+
+describe('移动 0 到数组末尾', () => {
+    it('正常类型', function () {
+        const array = [1, 0, 3, 4, 0, 11, 0]
+        moveZero2(array)
+        expect(array).toEqual([1, 3, 4, 11, 0, 0, 0])
+    });
+    it('连续 0 情况', function () {
+        const array = [1, 0, 3, 4, 0, 0, 0, 11, 0]
+        moveZero2(array)
+        expect(array).toEqual([1, 3, 4, 11, 0, 0, 0, 0, 0])
+    });
+    it('没有 0', function () {
+        const array = [1, 3, 4, 11]
+        moveZero2(array)
+        expect(array).toEqual([1, 3, 4, 11])
+    });
+    it('全是 0', function () {
+        const array = [0, 0, 0, 0]
+        moveZero2(array)
+        expect(array).toEqual([0, 0, 0, 0])
+    });
+})
+```
+
+### 8. 性能测试
+
+```typescript
+const testArr = []
+for (let i = 0; i < 20 * 10000; i++) {
+    i % 10 ? testArr.push(i) : testArr.push(0)
+}
+
+console.time('嵌套循环')
+moveZero1(testArr)
+console.timeEnd('嵌套循环')  // 5.477s
+
+console.time('双指针')
+moveZero2(testArr)
+console.timeEnd('双指针')  // 3.22ms
+```
+
+### 9. 划重点
+
++ 向面试官确认：是否必须修改原数组？
++ 数组是连续存储，要慎用 unshift 、splice 等 API
++ 双指针思路
