--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -510,3 +510,133 @@ console.timeEnd('双指针')  // 3.22ms
 + 向面试官确认：是否必须修改原数组？
 + 数组是连续存储，要慎用 unshift 、splice 等 API
 + 双指针思路
+
+------
+
+
+
+## 七、字符串中连续最多的字符，以及次数
+
+### 1. 题目
+
++ 如，输入 ‘ abbcccddeeee1234 ’ ，计算得到：
++ 连续最多的字符是 ‘ e ’ ，4 次
+
+### 2. 传统思路
+
++ 嵌套循环，找出每个字符的连接次数，并记录
++ 看似时间复杂度是 O(n^2) 
++ 但是实际时间复杂度是 O(n) ，因为有 “ 跳步 ”
+
+### 3. 代码 ( 嵌套循环 )
+
+```typescript
+/**
+ * 获取字符串中连续最多的字符及次数(嵌套循环)
+ * @param str
+ */
+function findContinuousChar1(str: string): IRes {
+    const res: IRes = {
+        str: '',
+        times: 0
+    }
+    const len = str.length
+    if (!len) return res
+    let tempLength = 0  // 临时记录当前连续字符的长度
+    // O(n)
+    for (let i = 0; i < len; i++) {
+        tempLength = 0
+        for (let j = i; j < len; j++) {
+            if (str[i] === str[j]) {
+                tempLength++
+            }
+            if (str[i] !== str[j] || j === len - 1) {
+                // 不相等, 或者已经到了最后一个元素, 要判断最大值
+                if (tempLength > res.times) {
+                    res.str = str[i]
+                    res.times = tempLength
+                }
+                if (i < len - 1) {
+                    i = j - 1  // 跳步
+                }
+                break
+            }
+        }
+    }
+    return res
+}
+```
+
+### 4. 双指针思路
+
++ 定义指针 i 和 j ，j 不动，i 继续移动
++ 如果 i 和 j 的值一直相等，则 i 继续移动
++ 直到 i 和 j 的值不相等，记录处理，让 j 追上 i 。重复第一步
+
+### 5. 代码（双指针）
+
+```typescript
+/**
+ * 获取字符串中连续最多的字符及次数(双指针)
+ * @param str
+ */
+function findContinuousChar2(str: string): IRes {
+    const res: IRes = {
+        str: '',
+        times: 0,
+    }
+    const len = str.length
+    if (!len) return res
+    let tempLength = 0  // 临时记录当前连续字符的长度
+    let i
+    let j = 0
+    // O(n)
+    for (i = 0; i < len; i++) {
+        if (str[i] === str[j]) {
+            tempLength++
+        }
+        if (str[i] !== str[j] || i === len - 1) {
+            // 不相等, 或者已经到了最后一个元素, 要判断最大值
+            if (tempLength > res.times) {
+                res.str = str[j]
+                res.times = tempLength
+            }
+            tempLength = 0  // 重置
+
+            if (i < len - 1) {
+                j = i  // 让 j 追上 i
+                i--  // 细节
+            }
+        }
+    }
+    return res
+}
+```
+
+### 6. 性能测试
+
+```typescript
+let str = ''
+for (let i = 0; i < 100 * 10000; i++) {
+    str += i.toString()
+}
+console.time('findContinuousChar1')
+findContinuousChar1(str)
+console.timeEnd('findContinuousChar1');  // 159.09ms
+
+console.time('findContinuousChar2')
+findContinuousChar2(str)
+console.timeEnd('findContinuousChar2');  // 150.831ms
+```
+
+### 7. 其他方式
+
++ 正则表达式 -- 效率非常低，慎用！！！
++ 累计各个元素的连续长度，最后求最大值 -- 徒增空间复杂度
++ PS：算法题尽量用 “ 低级 ” 代码，慎用语法糖或者高级 API
+
+### 8. 划重点
+
++ 要注意实际复杂度，不要被代码表面迷惑（类似于跳步）
++ 双指针常用于解决嵌套循环
++ 算法题慎用正则表达式（实际工作可以用）
