docs: 更新"数据结构下"文档, 字符串中连续最多的字符单元测试 及 快速排序

--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -613,7 +613,45 @@ function findContinuousChar2(str: string): IRes {
 }
 ```
 
-### 6. 性能测试
+### 6. 单元测试
+
+```typescript
+/**
+ * @description 获取字符串中连续最多的字符及次数
+ * @author lzz
+ */
+
+import {findContinuousChar1, findContinuousChar2} from './11.获取字符串中连续最多的字符及次数'
+
+describe('获取字符串中连续最多的字符及次数', () => {
+    it('正常情况', function () {
+        expect(findContinuousChar2('aabbcccddeeee11223')).toEqual({
+            str: 'e',
+            times: 4
+        })
+    });
+    it('空字符串', function () {
+        expect(findContinuousChar2('')).toEqual({
+            str: '',
+            times: 0
+        })
+    });
+    it('无连续', function () {
+        expect(findContinuousChar2('abcdefghijk')).toEqual({
+            str: 'a',
+            times: 1
+        })
+    });
+    it('全部连续', function () {
+        expect(findContinuousChar2('aaaaaaaaaaa')).toEqual({
+            str: 'a',
+            times: 11
+        })
+    });
+})
+```
+
+### 7. 性能测试
 
 ```typescript
 let str = ''
@@ -629,14 +667,166 @@ findContinuousChar2(str)
 console.timeEnd('findContinuousChar2');  // 150.831ms
 ```
 
-### 7. 其他方式
+### 8. 其他方式
 
 + 正则表达式 -- 效率非常低，慎用！！！
 + 累计各个元素的连续长度，最后求最大值 -- 徒增空间复杂度
 + PS：算法题尽量用 “ 低级 ” 代码，慎用语法糖或者高级 API
 
-### 8. 划重点
+### 9. 划重点
 
 + 要注意实际复杂度，不要被代码表面迷惑（类似于跳步）
 + 双指针常用于解决嵌套循环
 + 算法题慎用正则表达式（实际工作可以用）
+
+------
+
+
+
+## 八、用 JS 实现快速排序
+
+### 1. 固定算法，固定思路
+
++ 找到中间位置 midValue
++ 遍历数组，小于 midvalue 放在 left ，否则放在 right
++ 继续递归，最后 concat 拼接返回
+
+### 2. 细节
+
++ 获取 midValue 的两种方式：
++ 使用 splice ，会修改原数组
++ 使用 slice ，不会修改原数组 -- 更加推荐
+
+### 3. 代码
+
+```typescript
+/**
+ * @description JS 实现快速排序
+ * @author lzz
+ */
+
+/**
+ * 快速排序 - splice 方法
+ * @param arr
+ */
+function quickSort1(arr: number[]): number[] {
+    const len = arr.length
+    if (!len) return arr
+    const midIndex = Math.floor(len / 2)
+    const midValue = arr.splice(midIndex, 1)[0]
+    const left: number[] = []
+    const right: number[] = []
+    // 注意: 这里不能使用 len , 应使用 arr.length , 因为 splice 已经改变数组 arr
+    // O(nlogn)
+    for (let i = 0; i < arr.length; i++) {
+        const n = arr[i]
+        if (n < midValue) {
+            // 小于 midValue 则放在左侧
+            left.push(n)
+        } else {
+            // 大于 midValue 则放在右侧
+            right.push(n)
+        }
+    }
+    return quickSort1(left).concat(
+        [midValue],
+        quickSort1(right)
+    )
+}
+
+/**
+ * 快速排序 - slice 或 取索引 方法
+ * @param arr
+ */
+function quickSort2(arr: number[]): number[] {
+    const len = arr.length
+    if (!len) return arr
+    const midIndex = Math.floor(len / 2)
+    // 为了对比 splice , 可使用 arr[midIndex]
+    const midValue = arr.slice(midIndex, midIndex + 1)[0]
+    // const midValue = arr[midIndex]
+    const left: number[] = []
+    const right: number[] = []
+    // O(nlogn)
+    for (let i = 0; i < len; i++) {
+        // 要忽略中间值
+        if (i !== midIndex) {
+            const n = arr[i]
+            if (n < midValue) {
+                // 小于 midValue 则放在左侧
+                left.push(n)
+            } else {
+                // 大于 midValue 则放在右侧
+                right.push(n)
+            }
+        }
+    }
+    return quickSort2(left).concat(
+        [midValue],
+        quickSort2(right)
+    )
+}
+```
+
+### 4. 单元测试
+
+```typescript
+/**
+ * @description 快速排序
+ * @author lzz
+ */
+
+import {quickSort1, quickSort2} from './12. 快速排序'
+
+describe('快速排序', () => {
+    it('正常情况 ', function () {
+        const arr = [1, 23, 2, 4, 4, 66, 7, 8]
+        expect(quickSort2(arr)).toEqual([1, 2, 4, 4, 7, 8, 23, 66])
+    });
+    it('有负数 ', function () {
+        const arr = [1, 23, -2, 4, 4, 66, 7, 8]
+        expect(quickSort2(arr)).toEqual([-2, 1, 4, 4, 7, 8, 23, 66])
+    });
+    it('同一元素 ', function () {
+        const arr = [1, 1, 1, 1, 1]
+        expect(quickSort2(arr)).toEqual([1, 1, 1, 1, 1])
+    });
+    it('空数组 ', function () {
+        expect(quickSort2([])).toEqual([])
+    });
+})
+```
+
+### 5. 时间复杂度
+
++ 有遍历，有二分 -- O(nlogn)
++ 常规排序，嵌套循环，复杂度是 O(n^2)
+
+### 6. 性能测试
+
+```typescript
+// 性能测试
+const array = []
+for (let i = 0; i < 10 * 10000; i++) {
+    array.push(Math.floor(Math.random() * 1000))
+}
+console.time('splice')
+quickSort1(array)
+console.timeEnd('splice')  // 73.464ms
+
+console.time('slice')
+quickSort2(array)
+console.timeEnd('slice')  // 71.336ms
+```
+
+### 7. splice 和 slice 没有区分出来
+
++ 算法本身的时间复杂度就够高 O(nlogn) 
++ 外加，splice 是逐步二分之后执行的， 二分会快速消减数量级
++ 如果单独比较 splice 和 slice ，效果会非常明显
+
+### 8. 划重点
+
++ 常见排序算法 -- 固定思维
++ 有二分，时间复杂度就包含 O(logn)
++ 注意数组操作：splice 和 slice
