docs: 更新"数据结构下"文档, 对称数(回文)

--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -830,3 +830,137 @@ console.timeEnd('slice')  // 71.336ms
 + 常见排序算法 -- 固定思维
 + 有二分，时间复杂度就包含 O(logn)
 + 注意数组操作：splice 和 slice
+
+------
+
+## 九、对称数
+
+### 1. 题目
+
++ 求 1-10000 之间所有的对称数（回文）
++ 例如：1, 2, 11, 22, 101, 232, 1221...
+
+### 2. 解题思路
+
++ 思路一：使用数组反转、比较
+  1. 数字转换为字符串，在转换为数组
+  2. 数组 reverse ，再 join 为字符串
+  3. 前后字符串进行对比
++ 思路二：字符串头尾比较
+  1. 数字转换为字符串
+  2. 字符串头尾字符比较
+  3. ( 也可以用 **栈** ，像括号匹配，但要注意奇偶数 )
++ 思路三：生成翻转数
+  1. 使用 % 和 Math.floor 生成反转数
+  2. 前后数字进行对比
+  3. ( 全程操作数字，没有字符串类型 )
+
+### 3. 代码
+
+```typescript
+/**
+ * 求 1-max 之间所有的对称数 - 反转比对
+ * @param max 最大值
+ */
+function palindromeNum1(max: number): number[] {
+    const res: number[] = []
+    if (max <= 0) return res
+    for (let i = 1; i <= max; i++) {
+        const str = i.toString()
+        // 转换为字符串，转换为数组，再反转，比较
+        if (str === str.split('').reverse().join('')) {
+            res.push(Number(str))
+        }
+    }
+    return res
+}
+
+/**
+ * 求 1-max 之间所有的对称数 - 字符串前后比对
+ * @param max 最大值
+ */
+function palindromeNum2(max: number): number[] {
+    const res: number[] = []
+    if (max <= 0) return res
+    for (let i = 1; i <= max; i++) {
+        const str = i.toString()
+        const len = str.length
+        let index = 0
+        for (let j = 0; j < len; j++) {
+            if (str[j] === str[len - 1 - j]) {
+                index++
+            }
+        }
+        if (index === len) res.push(i)
+    }
+    return res
+}
+
+/**
+ * 求 1-max 之间所有的对称数 - 生成反转数
+ * @param max 最大值
+ */
+function palindromeNum3(max: number): number[] {
+    const res: number[] = []
+    if (max <= 0) return res
+    for (let i = 1; i <= max; i++) {
+        let n = i
+        let rev = 0  // 储存反转数
+        // 生成反转数
+        while (n > 0) {
+            rev = rev * 10 + n % 10
+            n = Math.floor(n / 10)
+        }
+        if (i === rev) res.push(i)
+    }
+    return res
+}
+```
+
+### 4. 单元测试
+
+```typescript
+/**
+ * @description 求 1-10000 之间所有的对称数（回文）
+ * @author lzz
+ */
+import {palindromeNum1, palindromeNum2, palindromeNum3} from './13.对称数'
+
+describe('对称数', () => {
+    it('正常情况 ', function () {
+        expect(palindromeNum1(100).length).toBe(18)
+    });
+    it('max 小于等于 0 ', function () {
+        expect(palindromeNum1(0)).toEqual([])
+    });
+})
+```
+
+### 5. 性能测试
+
+```typescript
+// 性能测试
+console.time('palindromeNum1')
+palindromeNum1(100 * 10000)
+console.timeEnd('palindromeNum1')  // 346ms
+
+console.time('palindromeNum2')
+palindromeNum2(100 * 10000)
+console.timeEnd('palindromeNum2')  // 106ms
+
+console.time('palindromeNum3')
+palindromeNum3(100 * 10000)
+console.timeEnd('palindromeNum3')  // 39ms
+```
+
+### 6. 性能分析
+
++ 思路1 - 看似是 O(n) ，但数组转换、操作都需要时间，所以慢
++ 思路2 vs 思路3 ，操作数字更快（电脑原型就是计算器）
++ 思路2 要用栈，不合适。因为栈也一般用数组实现，会慢
+
+### 7. 划重点
+
++ 尽量不要转换数据结构，尤其数组这种有序结构
++ 尽量不要用内置 API ，如 reverse ，不好识别复杂度
++ 数字操作最快，其次是字符串
