--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -964,3 +964,36 @@ console.timeEnd('palindromeNum3')  // 39ms
 + 尽量不要转换数据结构，尤其数组这种有序结构
 + 尽量不要用内置 API ，如 reverse ，不好识别复杂度
 + 数字操作最快，其次是字符串
+
+------
+
+## 十、高效的字符串前缀匹配
+
+### 1. 题目
+
++ 有一个英文单词库（数组），里面有十几万个英文单词
++ 输入一个字符串，**快速** 判断是不是某一个单词的前缀
++ 说明思路，不用写代码
+
+### 2. 解题思路
+
++ 常规思路
+  1. 遍历单词库数组
+  2. indexOf 判断前缀
+  3. 实际时间复杂度超过了 O(n) ，因为要考虑 indexOf 的计算量
++ 优化
+  1. 英文字母一共 26 个，可以提前把单词库数拆分成 26 个
+  2. 既然第一层拆分 26 个，第二层、第三层，还可以继续拆分
+  3. 最后把单词库拆分成一棵树
+
+### 3. 性能分析
+
++ 如遍历数组，时间复杂度至少 O(n) 起步（ n 是数组长度 ）
++ 而改成数，时间复杂度降低到 O(m) （ m 是单词长度 ）
++ PS：哈希表（对象）通过 key 查询，时间复杂度是 O(1)
+
+### 4. 划重点
+
++ 考虑优化原始数据结构（需先沟通）
++ 有明确范围的数据（如 26 个英文字母），考虑使用哈希表（对象）
++ 以空间换时间，定义数据结构最重要
