docs: 更新"数据结构下"文档, 数字千分位格式化

--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -997,3 +997,104 @@ console.timeEnd('palindromeNum3')  // 39ms
 + 考虑优化原始数据结构（需先沟通）
 + 有明确范围的数据（如 26 个英文字母），考虑使用哈希表（对象）
 + 以空间换时间，定义数据结构最重要
+
+------
+
+
+
+## 十一、数字千分位格式化
+
+### 1. 题目
+
++ 将数字千分位格式化，输出字符串
++ 如输入数字 12050100 ，输出字符串 12,050,100
++ ( 注意：逆序判断 )
+
+### 2. 常见思路
+
++ 转换为数组，reverse ，每 3 位拆分
++ 使用正则表达式
++ 使用字符串拆分
+
+### 3. 代码
+
+```typescript
+/**
+ * @description 数字千分位格式化
+ * @author lzz
+ */
+
+/**
+ * 千分位格式化（使用数组）
+ * @param n
+ */
+export function format1(n: number): string {
+    n = Math.floor(n)  // 只考虑整数部分
+    const s = n.toString()
+    const arr = s.split('').reverse()
+    return arr.reduce((prev, val, index) => {
+        if (index % 3 === 0) {
+            if (prev) {
+                return val + ',' + prev
+            } else {
+                return val
+            }
+        } else {
+            return val + prev
+        }
+    }, '')
+}
+
+/**
+ * 千分位格式化（使用字符串）
+ * @param n
+ */
+export function format2(n: number): string {
+    const num = Math.floor(n)
+    const str = num.toString()
+    const len = str.length
+    let res = ''
+    for (let i = len - 1; i >= 0; i--) {
+        const j = len - i
+        if (j % 3 === 0 && i !== 0) {
+            res = ',' + str[i] + res
+        } else {
+            res = str[i] + res
+        }
+    }
+    return res
+}
+```
+
+### 4. 单元测试
+
+```typescript
+/**
+ * @description 数字千分位格式化
+ * @author lzz
+ */
+
+import {format1, format2} from './14.数字千分位格式化'
+
+describe('数字千分位格式化', () => {
+    it('正常情况', function () {
+        expect(format2(100200300)).toBe('100,200,300')
+    });
+    it('千位以下', function () {
+        expect(format2(0)).toBe('0')
+        expect(format2(100)).toBe('100')
+    });
+})
+```
+
+### 5. 性能分析
+
++ 使用数组，转换影响性能
++ 使用正则表达式，性能较差
++ 使用字符串，性能较好 -- 推荐答案
+
+### 6. 划重点
+
++ 顺序：从尾到头
++ 尽量不要转化数据结构
++ 慎用正则表达式
