--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -1098,3 +1098,124 @@ describe('数字千分位格式化', () => {
 + 顺序：从尾到头
 + 尽量不要转化数据结构
 + 慎用正则表达式
+
+------
+
+## 十二、切换字母大小写
+
+### 1. 题目
+
++ 输入一个字符串，切换其中字母的大小写
++ 如，输入字符串 12aBc34 ，输出字符串 12AbC34
+
+### 2. 常见思路
+
++ 正则表达式
+
++ 通过 ASCII 码判断
+
+  ![image-20220312153118207](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220312153118207.png)
+
+### 3. 代码
+
+```typescript
+/**
+ * @description 切换字母大小写
+ * @author lzz
+ */
+
+/**
+ * 切换字母大小写 - 正则
+ * @param str
+ */
+function changeCase1(str: string): string {
+    let res = ''
+    const reg1= /[a-z]/
+    const reg2= /[A-Z]/
+    for (let i = 0; i < str.length; i++) {
+        if (reg1.test(str[i])) {
+            // 小写字母
+            res += str[i].toUpperCase()
+        } else if (reg2.test(str[i])) {
+            // 大写字母
+            res += str[i].toLowerCase()
+        } else {
+            res += str[i]
+        }
+    }
+    return res
+}
+
+/**
+ * 切换字母大小写 - ASCII
+ * @param str
+ */
+function changeCase2(str: string): string {
+    let res = ''
+    for (let i = 0; i < str.length; i++) {
+        const code = str[i].charCodeAt(0)
+        if (code >= 65 && code <= 90) {
+            // 大写字母
+            res += String.fromCharCode(code + 32)
+            // 也可使用 API 但是经过测试 会比上面方法慢
+            // res += str[i].toLowerCase()
+        } else if (code >= 97 && code <= 122) {
+            // 小写字母
+            res += String.fromCharCode(code - 32)
+            // res += str[i].toUpperCase()
+        } else {
+            res += str[i]
+        }
+    }
+    return res
+}
+```
+
+### 4. 单元测试
+
+```typescript
+/**
+ * @description 切换字母大小写
+ * @author lzz
+ */
+import {changeCase1, changeCase2} from './15.切换字母大小写'
+
+describe('切换字母大小写', () => {
+    it('正常情况', function () {
+        expect(changeCase2('2aBcD1')).toBe('2AbCd1')
+    });
+    it('空字符', function () {
+        expect(changeCase2('')).toBe('')
+    });
+    it('非字母', function () {
+        expect(changeCase2('2你!#')).toBe('2你!#')
+    });
+})
+```
+
+### 5. 性能测试
+
+```typescript
+const s = '123asd321BhS33BSC'
+console.time('reg')
+for (let i = 0; i < 100 * 10000; i++) {
+    changeCase1(s)
+}
+console.timeEnd('reg')  // 875ms
+
+console.time('ascii')
+for (let i = 0; i < 100 * 10000; i++) {
+    changeCase2(s)
+}
+console.timeEnd('ascii')  // 224ms
+```
+
+### 6. 性能分析
+
++ 使用正则，性能较差
++ 使用 ASCII 码，性能较好 -- 推荐答案
+
+### 7. 划重点
+
++ 慎用正则表达式
++ 掌握常见的 ASCII 码
