--- a/Node2/数据结构和算法-下.md
+++ b/Node2/数据结构和算法-下.md
@@ -1219,3 +1219,35 @@ console.timeEnd('ascii')  // 224ms
 
 + 慎用正则表达式
 + 掌握常见的 ASCII 码
+
+------
+
+
+
+## 十三、为什么 0.1 + 0.2 !== 0.3
+
+### 1. 计算机使用二进制存储数据
+
++ 整数转换二进制没有误差，如 9 转换为二进制是 1001
++ 而小数可能无法用二进制准确的表达，如 0.2 转换为 1.1001100...
++ 不光 JavaScript 其他编程语言也如此
+
+------
+
+## 总结
+
+### 1. 内容总结
+
++ 前端数据结构和算法的常见题目
++ 包含了数组、栈、队列、链表、二叉树这些常见的数据结构
++ 常用的算法思维如贪婪、二分、动态规划，以及如何计算时间复杂度
+
+### 2. 划重点
+
++ 有序数据考虑用二分
++ 双指针可以解决嵌套循环
+
+### 3. 注意事项
+
++ 注意区分逻辑结构和物理结构，否则思维会很混乱
++ 要有 “算法敏感度”，条件反射般的根据数据结构分析时间复杂度
