--- a/Node2/数据结构和算法-上.md
+++ b/Node2/数据结构和算法-上.md
@@ -8,25 +8,19 @@
 
 ### 1. 数据结构和算法
 
-+ 数据结构和算法，是大厂前端面试的“拦路虎”。其实如果了解常用数据结构，掌握基本的算法思维，就不难应对。本章将通过多个面试题，讲解算法面试题的解题思路，同时复习常用数据结构和算法思维
++ 了解常用数据结构，掌握基本的算法思维，算法面试题的解题思路，同时复习常用数据结构和算法思维
 
-### 2. 为何要考察
-
-+ 如果在短时间之内快速判断一个工程师是否优秀？考察算法是最合理的方式 —— 这是业界多年的经验积累
-+ 前端面试考算法不是因为内卷，算法一直在后端面试中被考察。现在前端也考查，说明前端能做的工作越来越多了，这是好事
-
-### 3. 考察的重点
+### 2. 考察的重点
 
 + 算法的时间复杂度和空间复杂度
 + 三大算法思维：贪心，二分，动态规划
 + 常见数据结构
 
-### 4. 注意事项
+### 3. 注意事项
 
 + 算法，有难度，请耐心学习
 + 一个问题的解决方案有很多，要找出最优解（重要）
 + 不仅关注题目本身，更要关注知识点和解题思路
-+ 按顺序学习（本节按顺序设计的）
 
 ------
 
