docs: 更新"基础知识"文档, 节流和防抖区别

--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -45,3 +45,79 @@ xhr.send(null)
 + lib 和 API 区别
 + 实际项目中，使用现成的 lib ，尽量不要自己造轮子
 + 但读源码，造轮子是很好的个人学习方式
+
+------
+
+
+
+## 二、节流和防抖
+
+### 1. 题目
+
++ 防抖和节流有什么区别
++ 分别应用到什么场景
+
+### 2. 防抖
+
++ 防抖，防止抖动 “ 你先抖动着，什么时候停 ” 再执行下一步
++ 例如：一个搜索输入框，等输入停止之后，再触发搜索
+
+### 3. 防抖 - 代码
+
+```js
+const input = document.getElementById('input')
+    input.addEventListener('keyup', debounce(function () {
+        console.log('提交', this.value)
+    }, 300))
+
+function debounce(fun, delay = 200) {
+  	let timer = null
+  	return function () {
+    	if (timer) clearTimeout(timer)
+    	timer = setTimeout(() => {
+      	fun.apply(this, arguments)  // 透传 this 和 参数
+      	timer = null
+    	}, delay)
+  	}
+}
+```
+
+### 4. 防抖 - 示意图
+
+![image-20220313134215722](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220313134215722.png)
+
+### 5. 节流
+
++ 节流，节省交互沟通。流，不一定至流量
++ “ 别急，一个一个来，按时间节奏来，插队者无效 ”
++ 例如，drag 和 scroll 期间触发某个回调，要设置一个时间间隔
+
+### 6. 节流 - 代码
+
+```js
+const div = document.getElementById('div')
+    input.addEventListener('drag', debounce(function (e) {
+        console.log('拖动', e.offsetX, e.offsetY)
+    }, 100))
+
+function debounce(fun, delay = 200) {
+  	let timer = null
+  	return function () {
+    	if (timer) clearTimeout(timer)
+    	timer = setTimeout(() => {
+      	fun.apply(this, arguments)  // 透传 this 和 参数
+      	timer = null
+    	}, delay)
+  	}
+}
+```
+
+### 7. 节流 - 示意图
+
+![image-20220313135926463](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220313135926463.png)
+
+### 8. 答案
+
++ 节流：限制执行频率，有节奏的执行
++ 防抖：限制执行次数，多次密集的触发只执行一次
++ 节流关注 “过程” ，防抖关注 “结果”
