docs: 更新"基础知识"文档, px % em rem vw vh 的区别

--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -2,6 +2,8 @@
 
 ------
 
+
+
 ## 一、Ajax Fetch Axios 三者区别
 
 ### 1. 三者都用于网络请求，但是不同维度
@@ -121,3 +123,28 @@ function debounce(fun, delay = 200) {
 + 节流：限制执行频率，有节奏的执行
 + 防抖：限制执行次数，多次密集的触发只执行一次
 + 节流关注 “过程” ，防抖关注 “结果”
+
+------
+
+
+
+## 三、px % em rem vw vh 的区别
+
+### 1. px 和 %
+
++ px 基本单位，绝对单位（其他的都是相对单位）
++ % 相对父元素的宽度比例
+
+### 2. em 和 rem
+
++ em 是根据当前元素的 font-size
++ rem 是根据根节点的 font-size
+
+### 3. vw 和 vh
+
++ vw 是屏幕宽度的 1 %
++ vh 是屏幕高度的 1 %
++ vmin 两者间的最小值，vmax 两者间的最大值
+
+------
+
