docs: 更新"基础知识"文档, 箭头函数

--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -148,3 +148,98 @@ function debounce(fun, delay = 200) {
 
 ------
 
+
+
+## 四、箭头函数
+
+### 1. 题目
+
++ 箭头函数有什么缺点
++ 什么时候不能使用箭头函数
+
+### 2. 箭头函数缺点
+
++ 没有 arguments
++ 无法通过 apply call bind 改变 this
++ 某些箭头函数的代码难以阅读
+
+### 3. 不适用场景
+
++ 对象方法
+
+  ```js
+  const obj = {
+    	name: 'lzz',
+    	getName: () => {
+        	return this.name
+      }
+  }
+  ```
+
++ 原型方法
+
+  ```js
+  const obj = {
+    	name: 'lzz'
+  }
+  obj.__proto__.getName = () => {
+    	return this.name
+  }
+  ```
+
++ 构造函数
+
+  ```js
+  const Foo = (name, age) => {
+    	this.name = name
+    	this.age = age
+  }
+  const foo = new Foo('lzz', 24)  // Foo is not a constructor
+  ```
+
++ 动态上下文中的回调函数
+
+  ```js
+  const btn = document.getElementById('btn')
+  btn.addEventListener('click', () => {
+    	// console.log(this === window)  // true
+    	this.innerText = 'clicked'
+  })
+  ```
+
++ Vue 的生命周期和 method
+
+  ```js
+  {
+      data() {
+        	return {name: 'lzz'}
+      },
+      method: {
+          getName: () => {
+            // 报错 Cannot read properties of undefined (reading 'name')
+            return this.name
+          }
+          // getName() {
+          //     return this.name  // 正常
+          // }
+      },
+          mounted:() => {
+            // 报错 Cannot read properties of undefined (reading 'name')
+            console.log(this.name)
+          }
+          // mounted() {
+          //     console.log(this.name)  // 正常
+          // }
+  }
+  ```
+
+  1. Vue 组件本质上是一个 JS 对象
+  2. React 组件（非 Hooks）它本质上是一个 ES6 class（可以使用箭头函数）
+
+### 4. 划重点
+
++ 要熟练使用箭头函数，也要对函数 this arguments 敏感
++ 传统 Vue 组件是 JS 对象，传统 React 组件是 class ，两者不同
+
+------
+
