--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -243,3 +243,38 @@ function debounce(fun, delay = 200) {
 
 ------
 
+
+
+## 五、请描述 TCP 三次握手四次挥手
+
+### 1. 建立 TCP 连接
+
++ 先建立连接（确保双方都有收发消息的能力）
++ 再传输内容（如发送一个 get 请求）
++ 网络连接是 TCP 协议，传输内容是 HTTP 协议
+
+### 2. 三次握手 - 建立连接
+
++ Client 发包，Server 接收。Server：有 Client 找我
++ Server 发包，Client 接收。Client：Server 已经接收到消息了
++ Client 发包，Server 接收。Server：Client 要准备发送了
+
+### 3. 四次挥手 - 断开连接
+
++ Client 发包，Server 接收。Server：Client 已请求结束
++ Server 发包，Client 接收。Client：Server 已经收到，我等待它关闭
++ Server 发包，Client 接收。Client：Server 此时已经可以关闭了
++ Client 发包，Server 接收。Server：可以关闭了（然后关闭连接）
+
+### 4. 图解
+
+![image-20220313163958377](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220313163958377.png)
+
+![image-20220313164649894](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220313164649894.png)
+
+### 5. 划重点
+
++ 握手是连接，挥手是告别
+
+------
+
