docs: 更新"基础知识"文档, for ... in 和 for ... of 的区别

--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -278,3 +278,46 @@ function debounce(fun, delay = 200) {
 
 ------
 
+
+
+## 六、for ... in 和 for ... of 的区别
+
+### 1. key 和 value
+
++ for ... in 遍历得到 key
++ for ... of 遍历得到 value
+
+### 2. 适用于不同数据类型
+
++ 遍历对象：for ... in 可以，for ... of 不可以
+
++ 遍历 Map Set ：for ... of 可以，for ... in 不可以
+
++ 遍历 generator：for ... of 可以，for ... in 不可以
+
+  ```js
+  // 遍历 generato
+  function* foo() {
+      yield 10
+      yield 20
+      yield 30
+  }
+  for (const y of foo()) {
+      console.log(y)  // 10 20 30
+  }
+  ```
+
+### 3. 可枚举 vs 可迭代
+
++ for ... in 用于 **可枚举** 数据，如对象、数组、字符串
+
++ for ... of 用于 **可迭代** 数据，如数组、字符串、Map、Set
+
+  ![image-20220314103330492](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220314103330492.png)
+
+### 4. 答案
+
++ for ... in 用于 **可枚举** 数据，如对象、数组、字符串，得到 key
++ for ... of 用于 **可迭代** 数据，如数组、字符串、Map、Set，得到 value
+
+------
