docs: 更新"基础知识"文档, 优化for ... in 和 for ... of 的区别

--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -296,7 +296,7 @@ function debounce(fun, delay = 200) {
 + 遍历 generator：for ... of 可以，for ... in 不可以
 
   ```js
-  // 遍历 generato
+  // 遍历 generator
   function* foo() {
       yield 10
       yield 20
@@ -304,6 +304,17 @@ function debounce(fun, delay = 200) {
   }
   for (const y of foo()) {
       console.log(y)  // 10 20 30
+  }
+  // 拓展：generator 常用场景
+  // 为不具备 Iterator 接口的对象提供遍历方法
+  function* objectEntries(obj) {
+      for (const propKey of Object.keys(obj)) {
+          yield [propKey, obj[propKey]];
+      }
+  }
+  const jane = { first: 'Jane', last: 'Doe' };
+  for (const [key,value] of objectEntries(jane)) {
+      console.log(`${key}: ${value}`);  // first: Jane  last: Doe
   }
   ```
 
@@ -321,3 +332,4 @@ function debounce(fun, delay = 200) {
 + for ... of 用于 **可迭代** 数据，如数组、字符串、Map、Set，得到 value
 
 ------
+
