--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -333,3 +333,49 @@ function debounce(fun, delay = 200) {
 
 ------
 
+
+
+## 七、(连环问) for await ... of 有什么用
+
+### 1. 答案
+
++ for await ... of 用于遍历多个 Promise
+
+  ```js
+  function createPromise(val) {
+      return new Promise(resolve => {
+          setTimeout(() => {
+              resolve(val)
+          }, 3000)
+      })
+  }
+  
+  (async function () {
+      const p1 = createPromise(100)
+      const p2 = createPromise(100)
+      const p3 = createPromise(100)
+      // const res1 = await p1
+      // const res2 = await p2
+      // const res3 = await p3
+      const list = [p1, p2, p3]
+      Promise.all(list).then(res => console.log(res))
+      for await (let res of list) {
+          console.log(res)
+      }
+    	// 顺序调用
+    	const res1 = await createPromise(100)
+      console.log(res1)
+      const res2 = await createPromise(200)
+      console.log(res2)
+      const res3 = await createPromise(300)
+      console.log(res3)
+      const arr = [100, 200, 300]
+      for (let num of arr) {
+          const res = await createPromise(num)
+          console.log(res)
+      }
+  })()
+  ```
+
+------
+
