docs: 更新"基础知识"文档, HTMLCollection 和 NodeList 区别

--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -379,3 +379,49 @@ function debounce(fun, delay = 200) {
 
 ------
 
+
+
+## 八、offsetHeight scrollHeight clientHeight 区别
+
+### 1. 计算规则
+
++ offsetHeight / offsetWidth：border + padding + content
++ clientHeight / clientWidth：padding + content
++ scrollHeight / sceollWidth：padding + 实际内容尺寸（包括里面内容）
+
+------
+
+
+
+## 九、HTMLCollection 和 NodeList 区别
+
+### 1. Node 和 Element
+
++ DOM 是一棵树，所有节点都是 Node
++ Node 是 Element 的基类
++ Element 是其他 HTML 元素的基类，如 HTMLDivElement
+
+![image-20220314150540547](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220314150540547.png)
+
+### 2. HTMLCollection 和 NodeList
+
++ HTMLCollection 是 Element 的集合
++ NodeList 是 Node 集合
+
+### 3. 划重点
+
++ 获取 Node 和 Element 的返回结果可能不一样
++ 如 elem.childNodes 和 elem.children 不一样
++ 前者会包含 Text 和 Comment 节点，后者不会
+
+### 4. 扩展：类数组 -> 数组
+
+```js
+// HTMLCollection 和 NodeList 都不是数组, 而是 "类数组"
+const arr1 = Array.from(list)
+const arr2 = Array.prototype.slice.call(list)
+const arr3 = [...list]
+```
+
+------
+
