docs: 更新"基础知识"文档, Vue computed 和 watch 区别

--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -425,3 +425,16 @@ const arr3 = [...list]
 
 ------
 
+
+
+## 十、Vue computed 和 watch 区别
+
+### 1. 两者用途不同
+
++ computed 用于计算产生新的数据
++ watch 用于监听现有数据
+
+### 2. computed 有缓存
+
++ computed 有缓存
++ method 没有缓存
