docs: 更新"基础知识"文档, Vue 组件通讯有几种方式

--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -438,3 +438,46 @@ const arr3 = [...list]
 
 + computed 有缓存
 + method 没有缓存
+
+------
+
+
+
+## 十一、Vue 组件通讯有几种方式
+
+### 1. Vue 组件通讯有几种方式
+
++ props 和 $emit
+
++ 自定义事件（Vue3 中要单独引 event-emitter 库）
+
++ $attr
+
++ $parent
+
++ $refs
+
++ provide / inject
+
+  ```js
+  // 静态
+  provide: {
+    info: 'aaa'
+  }
+  // 响应式
+  provide() {
+    return {
+      info: computed(() => this.name)
+    }
+  }
+  // 接收
+  inject: ['info']
+  ```
+
++ Vuex
+
+### 2. 不同场景
+
++ 父子组件
++ 上下级组件（跨多级）通讯
++ 全局组件
