docs: 更新"基础知识"文档, Vuex mutation action 区别

--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -481,3 +481,14 @@ const arr3 = [...list]
 + 父子组件
 + 上下级组件（跨多级）通讯
 + 全局组件
+
+------
+
+
+
+## 十二、Vuex mutation action 区别
+
+### 1. 区别
+
++ mutation：原子操作；必须同步代码
++ action：可包含多个 mutation ；可包含异步代码
