--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -492,3 +492,55 @@ const arr3 = [...list]
 
 + mutation：原子操作；必须同步代码
 + action：可包含多个 mutation ；可包含异步代码
+
+------
+
+
+
+## 十三、JS 严格模式有什么特点
+
+### 1. 开启严格模式
+
+```js
+'use strict'  // 全局开启
+function fn() {
+  	'use strict'  // 某函数开启
+}
+```
+
+### 2. 特点
+
++ 全局变量必须先声明
+
++ 禁止使用 with
+
+  ```js
+  const obj = { x: 100, y: 200 }
+  with (obj) = {
+    	console.log(x, y)  // obj.x obj.y
+  }
+  ```
+
++ 创建 eval 作用域
+
+  ```js
+  'use strict'
+  var x = 10
+  eval(`var x = 20; console.log('in eval', x);`)  // 20 很不推荐使用 eval
+  console.log('out eval', x);  // 10
+  ```
+
++ 禁止 this 指向 window
+
+  ```js
+  'use strict'
+  function fn() {
+    	console.log('this', this)  //undefined
+  }
+  fn()
+  ```
+
++ 函数参数不能重名
+
+------
+
