docs: 更新"基础知识"文档, HTTP 跨域为何要发送 options 请求

--- a/Node2/前端基础知识.md
+++ b/Node2/前端基础知识.md
@@ -544,3 +544,40 @@ function fn() {
 
 ------
 
+
+
+## 十四、HTTP 跨域为何要发送 options 请求
+
+### 1. 跨域请求
+
++ 浏览器同源策略
++ 同源策略一般限制 Ajax 网络请求，不能跨域请求 server
++ 不会限制 `<link> <img> <script> <iframe> `加载第三方资源
+
+### 2. JSONP
+
+![image-20220315170045485](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220315170045485.png)
+
+### 3. CORS
+
+![image-20220315170153791](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220315170153791.png)
+
+### 4. 答案
+
++ options 请求，是跨域请求前的预检查
++ 浏览器自行发起的，无需我们干预
++ 不影响实际功能
+
+------
+
+
+
+## 十五、Restful API 常用 method
+
+- `GET` 查询
+- `POST` 新增
+- `PATCH` 更新
+  1. 跟 `PATCH` 很像的还有 `PUT` 方法，两者有差别
+     + `PUT` 更新全部内容，即替换
+     + `PATCH` 更新部分内容 —— 更加常用
+- `DELETE` 删除
