docs: 补充"原理和源码"文档, JS 内存泄漏如何检测？场景？

--- a/Node2/前端原理和源码.md
+++ b/Node2/前端原理和源码.md
@@ -44,8 +44,39 @@
 
 + 不算，属于用户期望，但是垃圾回收不掉
 
+### 3. 内存泄漏检测方法
+
++ 可使用 Chrome Performance 检测
+
+  1. 泄漏结果
+
+     ![image-20220316155504373](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220316155504373.png)
+
+  2. 正常结果
+
+     ![image-20220316155945765](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220316155945765.png)
+
+### 4. 内存泄漏场景（Vue 为例）
+
++ 被全局变量、函数引用，组件销毁时未清除
++ 被全局事件、定时器引用，组件销毁时未清除
++ 被自定义事件引用，组件销毁时未清除
+
+### 5. 划重点
+
++ 前几年前端不太注重内存泄漏，因为不像后端 7*24 持续运行
++ 近几年前端功能变得复杂，内存问题也要重点考虑
+
+### 6. 扩展：WeakMap WeakSet
+
+```js
+const wMap = new WeakMap()  // 弱引用
+function fn() {
+  	const obj = { x: 100 }
+    wMap.set(obj, 100)  // weakMap 的 key 只能是引用类型
+}
+fn()
+```
+
 ------
 
-
-
-## 二、(连环问) 
