--- a/Node2/前端原理和源码.md
+++ b/Node2/前端原理和源码.md
@@ -80,3 +80,68 @@ fn()
 
 ------
 
+
+
+## 二、浏览器和 nodejs 事件循环区别
+
+### 1. 单线程和异步
+
++ JS 是单线程的（无论在浏览器还是 nodejs）
++ 浏览器中 JS 执行和 DOM 渲染共用一个线程
++ 异步
+
+### 2. 宏任务和微任务
+
++ 宏任务，如 setTimeout setInterval 网络请求
++ 微任务，如 Promise async / await
++ 微任务在下一轮 DOM 渲染之前执行，宏任务在之后执行
+
+### 3. 浏览器 event loop
+
+![image-20220317100749714](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220317100749714.png)
+
++ Callback Queue 分为
+  1. 宏任务队列 MarcoTask Queue
+  2. 微任务队列 MicroTask Queue
+
+### 4. nodejs 异步
+
++ Nodejs 同样适用 ES 语法，也是单线程，也需要异步
++ 异步任务也分：宏任务 + 微任务
++ 但是，它的宏任务和微任务，分为不同类型，有不同优先级
+
+### 5. nodejs 宏任务类型和优先级
+
++ Timers - setTimeout setInterval
++ I/O callbacks - 处理网络、流、TCP 的错误回调
++ Idle，prepare - 闲置状态（nodejs 内部使用）
++ Poll 轮询 - 执行 poll 中的 I/O 队列
++ Check 检查 - 存储 setImmediate 回调
++ Close callbacks - 关闭回调，如 socket.on('close')
+
+### 6. nodejs 微任务类型和优先级
+
++ 包括：promise，async / await，process.nextTick
++ 注意，process.nextTick 优先级最高
+
+### 7. nodejs event loop
+
++ 执行同步代码
+
++ 执行微任务（process.nextTick 优先级更高）
+
++ 按顺序执行 6 个类型的宏任务（每个结束时都执行当前的微任务）
+
+  ![image-20220317103505024](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220317103505024.png)
+
+### 8. 答案
+
++ 浏览器和 nodejs 的 event loop 流程基本相同
++ nodejs 宏任务和微任务分类型，有优先级
+
+### 9. 注意事项
+
++ 推荐使用 setImmediate 代替 process.nextTick
+
+------
+
