docs: 更新"原理和源码"文档, 虚拟 vdom 真的很快吗

--- a/Node2/前端原理和源码.md
+++ b/Node2/前端原理和源码.md
@@ -145,3 +145,27 @@ fn()
 
 ------
 
+
+
+## 三、虚拟 vdom 真的很快吗
+
+### 1. vdom
+
++ Virtual DOM ，虚拟 DOM
++ 用 JS 对象模拟 DOM 节点数据
++ 由 React 最先推广使用
+
+### 2. Vue React 等框架的价值
+
++ 组件化
++ 数据视图分离，数据驱动视图 -- 这是核心！
++ 只关注业务数据，而不用再关心 DOM 变化
+
+### 3. 答案
+
++ vdom 并不快，JS 直接操作 DOM 才最快
++ 但 “ 数据驱动视图 ” 要有合适的技术方案，不能全部 DOM 重建
++ vdom 就是目前最合适的技术方案（并不是因为它快，而是合适）
+
+------
+
