docs: 更新"原理和源码"文档, 遍历一个数组用 for 和 forEach 哪个快

--- a/Node2/前端原理和源码.md
+++ b/Node2/前端原理和源码.md
@@ -169,3 +169,42 @@ fn()
 
 ------
 
+
+
+## 四、遍历一个数组用 for 和 forEach 哪个快
+
+### 1. 代码
+
+```js
+const arr = []
+for (let i = 0; i < 100 * 10000; i++) {
+    arr.push(i)
+}
+
+console.time('for')
+let n = 0
+for (let i = 0; i < arr.length; i++) {
+    n++
+}
+console.timeEnd('for')  // 3.48ms
+
+console.time('forEach')
+let m = 0
+arr.forEach(() => m++)
+console.timeEnd('forEach')  // 14.13ms
+```
+
+### 2. 答案
+
++ for 更快
++ forEach 每次都要创建一个函数来调用，而 for 不会创建函数
++ 函数需要独立的作用域，会有额外的开销
+
+### 3. 划重点
+
++ 越 “ 低级 ” 的代码，性能往往越好
++ 日常开发别只考虑性能，forEach 代码可读性更好
++ 类似之前算法文档中：循环 vs 递归
+
+------
+
