--- a/Node2/前端原理和源码.md
+++ b/Node2/前端原理和源码.md
@@ -208,3 +208,77 @@ console.timeEnd('forEach')  // 14.13ms
 
 ------
 
+
+
+## 五、Vue 每个生命周期都做了什么
+
+![image-20220317170131288](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220317170131288.png)
+
+### 1. beforeCreate
+
++ 创建一个空白的 Vue 实例
++ data method 尚未被初始化，不可使用
+
+### 2. created
+
++ Vue 实例初始化完成，完成了响应式绑定
++ data method 都已经初始化完成，可调用
++ 尚未开始渲染模板
+
+### 3. beforeMount
+
++ 编译模板，调用 render 生成 vdom
++ 还没开始渲染 DOM
+
+### 4. mounted
+
++ 完成 DOM 渲染
++ 组件创建完成
++ 开始由 “ 创建阶段 ” 进入 “ 运行阶段 ”
+
+### 5. beforeUpdate
+
++ data 发生变化之后
++ 准备更新 DOM （尚未更新 DOM）
+
+### 6. updated
+
++ data 发生变化，且 DOM 更新完成
++ （不要再 updated 中修改 data ，可能导致死循环）
+
+### 7. beforeUnmount
+
++ 组件进入销毁阶段（尚未销毁，可正常使用）
++ 可移除、解绑一些全局事件、自定义事件
+
+### 8. unmounted
+
++ 组件被销毁
++ 所有子组件也被销毁了
+
+### 9. keep-alive 组件
+
++ onActivated 缓存组件被激活
++ onDeactivated 缓存组件被隐藏
+
+### 10. 连环问：Vue 什么时候操作 DOM 比较合适
+
++ Mounted 和 updated 都不能保证子组件全部挂在完成
+
++ 应使用 $nextTick 渲染 DOM
+
+  ```js
+  mounted() {
+      this.$nextTick(() => {
+        	// 仅在整个视图都被渲染之后才会运行的代码
+      })
+  }
+  ```
+
+### 11. 连环问：Vue3 Composition API 生命周期有何区别
+
++ 用 setup 代替了 beforeCreate 和 created
++ 使用 Hooks 函数的形式，如 mounted 改成 onMounted()
+
+------
+
