docs: 更新"原理和源码"文档, Vue2 Vue3 React 三者 diff 算法有何区别

--- a/Node2/前端原理和源码.md
+++ b/Node2/前端原理和源码.md
@@ -282,3 +282,42 @@ console.timeEnd('forEach')  // 14.13ms
 
 ------
 
+
+
+## 六、Vue2 Vue3 React 三者 diff 算法有何区别
+
+### 1. diff 算法
+
++ diff 算法很早就有
++ diff 算法应用广泛，如 GitHub 的 Pull Request 中的代码 diff
++ 如果要 **严格** diff 两棵树，时间复杂度 O(n^3) ，不可用
+
+### 2. Tree diff 的优化
+
++ 只比较同一层级，不跨级比较
++ tag 不同则删掉重建（不再去比较内部的细节）
++ 子节点通过 key 区分（ key 的重要性 ）
++ 优化后的时间复杂度 O(n)
+
+### 3. React diff - 仅右移
+
+![image-20220318105321872](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220318105321872.png)
+
+### 4. Vue2 - 双端比较
+
+![image-20220318105519337](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220318105519337.png)
+
+### 5. Vue3 - 最长递增子序列
+
+![image-20220318110337257](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220318110337257.png)
+
+### 6. （连环问）Vue React 为何循环时必须使用 key
+
++ vdom diff 算法会根据 key 判断元素是否要删除
++ 匹配到 key ，则移动元素 - 性能较好
++ 未匹配 key ，则删除重建 - 性能较差
+
+![image-20220318110807084](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220318110807084.png)
+
+------
+
