docs: 更新"原理和源码"文档, Vue-router MemoryHistory (abstract)

--- a/Node2/前端原理和源码.md
+++ b/Node2/前端原理和源码.md
@@ -321,3 +321,20 @@ console.timeEnd('forEach')  // 14.13ms
 
 ------
 
+
+
+## 七、Vue-router MemoryHistory (abstract)
+
+### 1. Vue-router 三种模式
+
++ Hash
+  1. location.hash
++ WebHistory
+  1. history.pushState
+  2. window.onpopstate
++ MemoryHistory ( V4 之前叫做 abstract history )
+
+### 2. 扩展：React-router 也有相同的 3 种模式
+
+------
+
