docs: 更新"原理和源码"文档, nodejs 如何开启进程，进程怎么通讯

--- a/Node2/前端原理和源码.md
+++ b/Node2/前端原理和源码.md
@@ -338,3 +338,109 @@ console.timeEnd('forEach')  // 14.13ms
 
 ------
 
+
+
+## 八、nodejs 如何开启进程，进程怎么通讯
+
+### 1. 进程 process 与 线程 thread
+
++ 进程，OS 进行资源分配和调度的最小单位，有独立内存空间
+
++ 线程，OS 进行运算调度的最小单位，共享进程内存空间
+
++ JS 是单线程的，但是可以开启多进程执行，如 WebWorker
+
+  ![image-20220321111642479](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220321111642479.png)
+
+### 2. 为何需要多进程
+
++ 多核 CPU ，更适合处理多进程
++ 内存较大，多个进程才能更好地利用（单进程有内存上限）
++ “ 压榨 ” 机器资源，更快，更节省
+
+### 3. fork 多进程 - 代码
+
+```js
+// 主进程
+const http = require('http')
+const fork = require('child_process').fork
+const server = http.createServer((req, res) => {
+    if (req.url === '/get-sum') {
+        console.log('主进程 ID', process.pid)
+        // 开启子进程
+        const computeProcess = fork('./compute.js')
+        computeProcess.send('开始计算')
+        computeProcess.on('message', data => {
+            console.log('主进程接收到的信息: ', data)
+            res.end('sum is ' + data)
+        })
+        computeProcess.on('close', () => {
+            console.log('子进程意外关闭')
+            computeProcess.kill()
+            res.end('error')
+        })
+    }
+})
+server.listen(3000, () => {
+    console.log('localhost: 3000')
+})
+console.log(process.pid)
+```
+
+```js
+// 子进程
+function getSum() {
+    let sum = 0
+    for (let i = 0; i < 10000; i++) {
+        sum += i
+    }
+    return sum
+}
+
+process.on('message', data => {
+    console.log('子进程 ID', process.pid)
+    console.log('子进程接收到的信息: ', data)
+    const sum = getSum()
+    // 发送消息给主进程
+    process.send(sum)
+})
+```
+
+### 4. cluster 多进程 - 代码
+
+```js
+const http = require('http')
+const cpuCoreLength = require('os').cpus().length
+const cluster = require('cluster')
+
+if (cluster.isMaster) {
+    for (let i = 0; i < cpuCoreLength; i++) {
+        cluster.fork()  // 开启子进程
+    }
+    cluster.on('exit', worker => {
+        console.log('子进程退出')
+        cluster.fork()  // 进程守护
+    })
+} else {
+    // 多个子进程会共享一个 TCP 连接, 提供一份网络服务
+    const server = http.createServer((req, res) => {
+        res.writeHead(200)
+        res.end('done')
+    })
+    server.listen(3000)
+}
+// 工作中会使用 PM2
+```
+
+### 5. 答案
+
++ 开启子进程 child_process.fork 和 cluster.fork
++ 使用 send 和 on 传递消息
+
+### 6. 划重点
+
++ 进程 VS 线程
++ JS 是单线程的
+
+------
+
