docs: 更新"原理和源码"文档, 请描述 JS Bridge 原理

--- a/Node2/前端原理和源码.md
+++ b/Node2/前端原理和源码.md
@@ -444,3 +444,24 @@ if (cluster.isMaster) {
 
 ------
 
+
+
+## 九、请描述 JS Bridge 原理
+
+### 1. 什么是 JS Bridge
+
++ JS 无法直接调用 native API
+
++ 需要通过一些特定的 “ 格式 ” 来调用
+
++ 这些 “ 格式 ” 就统称 JS-Bridge ，例如微信 JSSDK
+
+  ![image-20220321151555261](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220321151555261.png)
+
+### 2. JS Bridge 的常见实现方式
+
++ 注册全局 API
++ URL Scheme（推荐）
+
+------
+
