--- a/Node2/前端原理和源码.md
+++ b/Node2/前端原理和源码.md
@@ -465,3 +465,22 @@ if (cluster.isMaster) {
 
 ------
 
+
+
+## 十、requestIdleCallback 和 requestAnimationFrame 区别
+
+### 1. 由 React fiber 引起的关注
+
++ 组件树转换为链表，可分段渲染
++ 渲染时可以暂停，去执行其他高优任务，空闲时再继续渲染
++ 如何判断空闲？ -- requestIdleCallback
+
+### 2. 区别
+
++ requestAnimationFrame 每次渲染完都会执行，高优
++ requestIdleCallback 空闲时才执行，低优
+
+### 3. ( 连环问 ) 他们是宏任务还是微任务
+
++ 两者都是宏任务
++ 要等待 DOM 渲染完才执行，肯定宏任务
