--- a/Node2/从前端到全栈.md
+++ b/Node2/从前端到全栈.md
@@ -30,3 +30,108 @@ window.addEventListener("load", function() {
 
 ------
 
+
+
+## 二、token 和 cookie 有什么区别
+
+### 1. cookie
+
++ HTTP 无状态，每次请求都要带 cookie ，以帮助识别身份
++ 服务端也可以向客户端 set-cookie ，cookie 大小限制 4kb
++ 默认有跨域限制：不可跨域共享、传递 cookie
+
+### 2. cookie 本地存储
+
++ HTML5 之前 cookie 常被用于本地存储
++ HTML5 之后推荐使用 localStorage 和 sessionStorage
+
+### 3. 现代浏览器开始禁止第三方 cookie
+
++ 和跨域限制不同。这里指：禁止网页引入的第三方 JS 设置 cookies
+
++ 打击第三方广告，保护用户隐私
+
++ 新增属性 SameSite: Strict / Lax / None; 值可自己选择
+
+  ![image-20220321174346925](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220321174346925.png)
+
+### 4. cookie 和 session
+
++ cookie 用于登录校验，存储用户标识（如 userId）
+
++ session 在服务端，存储用户详细信息，和 cookie 信息一一对应
+
++ cookie + session 是常用的登录验证解决方案
+
+  ![image-20220321175050647](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220321175050647.png)
+
+### 5. token 和 cookie
+
++ cookie 是 HTTP 规范，而 token 是自定义传递
++ cookie 会默认被浏览器存储，而 token 需自己存储
++ token 默认没有跨域限制
+
+### 6. JWT ( JSON Web Token )
+
++ 前端发起登录，后端验证成功之后，返回一个加密的 token
+
++ 前端自行存储这个 token（其中包括了用户信息，加密了）
+
++ 以后访问服务端接口，都带着这个 token ，作为用户信息
+
+  ![image-20220322095235987](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220322095235987.png)
+
+### 7. 答案
+
++ cookie：HTTP 标准；跨域限制；配合 session 使用
++ token：无标准，无跨域限制；用于 JWT
+
+### 8. 划重点
+
++ cookie 的知识点很多，对于 HTTP 也很重要
++ Session 存在的价值
++ token 和 cookie 要对比理解，否则容易混淆
+
+### 9. ( 连环问 ) Session 和 JWT 哪个更好
+
++ Session 优点
+  1. 原理简单，易于学习
+  2. 用户信息存储在服务端，可快速封禁某个用户
++ Session 缺点
+  1. 占用服务器内存，硬件成本高
+  2. 多进程，多服务器时，不好同步 -- 需使用第三方缓存，如 redis
+  3. 默认有跨域限制
++ JWT 优点
+  1. 不占用服务端内存
+  2. 多进程、多服务器，不受影响
+  3. 没有跨域限制
++ JWT 缺点
+  1. 用户信息存储在客户端，无法快速封禁某用户
+  2. 万一服务端秘钥被泄露，则用户信息全部丢失
+  3. token 体积一般大于 cookie ，会增加请求的数据量
++ 答案
+  1. 如有严格管理用户信息的需求（保密、快速封禁）推荐 Session
+  2. 如没有特殊要求，则使用 JWT （如创业初期的网站）
+
+### 10. ( 连环问 ) 如何实现 SSO 单点登录
+
++ 基于 cookie
+
+  1. cookie 默认不可跨域共享，但有些情况下可设置为共享
+  2. 主域名相同，如 `www.baidu.com` `image.baidu.com`
+  3. 设置 cookie domain 为主域名，即可共享 cookie
+
++ SSO
+
+  1. 主域名完全不同，则 cookie 无法共享
+
+  2. 可使用 SSO 技术方案
+
+     ![iShot2022-03-22 10.41.01](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/iShot2022-03-22%2010.41.01.jpg)
+
++ OAuth 2.0
+
+  ![image-20220322104429670](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220322104429670.png)
+
+------
+
