--- a/Node2/从前端到全栈.md
+++ b/Node2/从前端到全栈.md
@@ -135,3 +135,46 @@ window.addEventListener("load", function() {
 
 ------
 
+
+
+## 三、HTTP 协议和 UDP 协议区别
+
+### 1. 网络协议
+
++ HTTP 协议在应用层
+
++ TCP UDP 协议在传输层
+
++ 严格来说，应该拿 TCP 和 UDP 进行比较
+
+  ![image-20220322142418277](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220322142418277.png)
+
+### 2. TCP 协议
+
++ 有连接（三次握手）
++ 有断开（四次挥手）
++ 稳定传输
+
+### 3. UDP 协议
+
++ 无连接，无断开
++ 不稳定传输，但效率高
++ 适用视频会议，语音通话
+
+### 4. ( 连环问 ) HTTP 协议 1.0 1.1 2.0 有什么区别
+
++ HTTP 1.0
+  1. 最基础的 HTTP 协议
+  2. 支持基本的 GET POST 方法
++ HTTP 1.1
+  1. 缓存策略 cache-control E-tag 等
+  2. 支持长连接 Connection: keep-alive ，一次 TCP 连接多次请求
+  3. 断点续传，状态码 206
+  4. 支持新的方法 PUT DELETE 等，可用于 Restful API
++ HTTP 2.0
+  1. 可压缩 header ，减少体积
+  2. 多路复用，一次 TCP 连接中可以多个 HTTP 并行请求
+  3. 服务端推送
+
+------
+
