--- a/Node2/从前端到全栈.md
+++ b/Node2/从前端到全栈.md
@@ -178,3 +178,121 @@ window.addEventListener("load", function() {
 
 ------
 
+
+
+## 四、WebSocket 和 HTTP 有什么区别
+
+### 1. WebSocket
+
++ 支持端对端通讯
++ 可以由 client 发起，也可以由 server 发起
++ 用于：消息通知，直播间讨论区，聊天室，协同编辑
+
+### 2. 代码
+
+```js
+// 客户端 html
+const ws = new WebSocket('ws://localhost:3001')
+ws.onopen = () => {
+  console.log('opened')
+  ws.send('client opened')
+}
+ws.onmessage = ev => {
+  console.log('客户端收到了信息', ev.data)
+}
+```
+
+```js
+// 服务端 nodejs
+const {WebSocketServer} = require('ws')
+
+const wsServer = new WebSocketServer({port: 3001})
+
+wsServer.on('connection', ws => {
+  console.log('connected')
+
+  ws.on('message', msg => {
+    console.log('收到了信息', msg.toString())
+
+    // 服务端像客户端发送信息
+    setTimeout(() => {
+      ws.send('服务端收到了信息' + msg.toString())
+    }, 2000)
+  })
+})
+```
+
+### 3. WebSocket 连接过程
+
++ 先发起一个 HTTP 请求
++ 成功之后再升级到 WebSocket 协议，再通讯
+
+### 4. WebSocket 和 HTTP 区别
+
++ WebSocket 协议名是 ws:// ，可 **双端** 发起请求
++ WebSocket 没有跨域限制
++ 通过 send 和 onmessage 通讯（HTTP 通过 req 和 res）
+
+### 5. ws 可升级为 wss （像 https）
+
+```js
+import {createServer} from 'https'
+import {readFileSync} from 'fs'
+import {WebSocketServer} from 'ws'
+
+const server = createServer({
+  cert: readFileSync('/path/to/cert.pem'),
+  key: readFileSync('/path/to/key.pem')
+})
+const wss = new WebSocketServer({server})
+```
+
+### 6. 扩展：实际项目推荐 socket.io ，API 更简洁
+
+```js
+io.on('connection', socket => {
+  // emit an event to the socket
+  socket.emit('request', '...')
+  // emit an event to all connected sockets
+  io.emit('broadcast', '...')
+  // listen to the event
+  socket.on('reply', () => { /* ... */ })
+})
+```
+
+### 7. 扩展：创建简易聊天室
+
+```js
+// nodejs
+const {WebSocketServer} = require('ws')
+
+const wsServer = new WebSocketServer({port: 3001})
+const list = new Set()
+wsServer.on('connection', curWs => {
+  console.log('connected')
+
+  // 这里不能一直 add , 实际中这里应该有清理缓存的机制
+  list.add(curWs)
+  curWs.on('message', msg => {
+    console.log('收到了信息', msg.toString())
+    // 传递给其他客户端
+    list.forEach(ws => {
+      if (ws === curWs) return
+      ws.send(msg.toString())
+    })
+  })
+})
+```
+
+### 8. ( 连环问 ) WebSocket 和 HTTP 长轮询的区别
+
++ HTTP 长轮询：客户端发起请求，服务端阻塞，不会立即返回
+
++ WebSocket：客户端可发起请求，服务端也可发起请求
+
++ HTTP 长轮询，需处理 timeout ，即 timeout 之后重新请求
+
+  ![image-20220322165000190](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220322165000190.png)
+
+------
+
