--- a/Node2/从前端到全栈.md
+++ b/Node2/从前端到全栈.md
@@ -296,3 +296,52 @@ wsServer.on('connection', curWs => {
 
 ------
 
+
+
+## 五、从输入 URL 到网页显示的完整过程
+
+### 1. 步骤
+
++ 网络请求
++ 解析
++ 渲染
+
+### 2. 网络请求
+
++ DNS 查询（得到 IP），建立 TCP 连接（三次握手）
++ 浏览器发起 HTTP 请求
++ 收到请求响应，得到 HTML 源代码
++ 继续请求静态资源
+  1. 解析 HTML 过程中，遇到静态资源还会继续发起网络请求
+  2. JS CSS 图片 视频等
+  3. 注意：静态资源可能有强缓存，此时不必请求
+
+### 2. 解析：字符串 -> 结构化数据
+
++ HTML 构建 DOM 树
+
++ CSS 构建 CSSOM 树 （style tree）
+
++ 两者结合，形成 render tree
+
+  ![image-20220323102131807](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220323102131807.png)
+
++ 优化解析
+  1. CSS 放在 `<head>` 中，不要异步加载 CSS
+  2. JS 放在 `<body>` 最下面（或合理使用 defer async）
+  3. `<img>` 提前定义 width height
+
+### 3. 渲染：Render Tree 绘制到页面
+
++ 计算各个 DOM 的尺寸、定位，最后绘制到页面
++ 遇到 JS 可能会执行（参考 defer async）
++ 异步 CSS 、图片加载，可能会触发重新渲染
+
+### 4. 答案
+
++ 网络请求：DNS 解析，建立 TCP 连接，HTTP 请求
++ 解析：DOM 树，CSSOM 树，Render Tree
++ 渲染：计算、绘制，同时执行 JS
+
+------
+
