docs: 更新"从前端到全栈"文档, 补充( 连环问 ) 重绘 repaint 重排 reflow 有什么区别

--- a/Node2/从前端到全栈.md
+++ b/Node2/从前端到全栈.md
@@ -343,5 +343,37 @@ wsServer.on('connection', curWs => {
 + 解析：DOM 树，CSSOM 树，Render Tree
 + 渲染：计算、绘制，同时执行 JS
 
+### 5. ( 连环问 ) 重绘 repaint 重排 reflow 有什么区别
+
++ 动态网页，随时都会重绘、重排
+  1. 网页动画
+  2. Modal Dialog 弹窗
+  3. 增加 / 删除一个元素，显示 / 隐藏一个元素
++ 重绘 repaint
+  1. 元素外观改变，如颜色、背景色
+  2. 但元素的尺寸、定位不变，不会影响其他元素的位置
++ 重排 reflow
+  1. 重新计算尺寸和布局，可能会影响其他元素的位置
+  2. 如元素高度增加，可能会使相邻元素位置下移
++ 区别
+  1. 重排比重绘要影响更大，消耗也更大
+  2. 尽量避免无意义的重排
+     + 集中修改样式，或直接切换 css class
+     + 修改前先设置 display: none ，脱离文档流
+     + 使用 BFC 特性，不影响其他元素位置
+     + 频繁触发（resize scroll）使用节流防抖
+     + 使用 createDocumentFragment 批量操作 DOM
+     + 优化动画，使用 CSS3 和 requestAnimationFrame
++ 扩展：BFC
+  1. Block Format Context 块级格式化上下文
+  2. 内部元素无论如何改动，都不会影响其他元素的位置 
+  3. 触发 BFC 的条件
+     + 根节点 `<html>`
+     + float: left / right;
+     + overflow: auto / scroll / hidden;
+     + display: inline-block / table / table-row / table-cell;
+     + display: flex / grid; 的直接子元素
+     + position: absolute / fixed;
+
 ------
 
