docs: 更新"从前端到全栈"文档, 如何实现网页多标签通讯

--- a/Node2/从前端到全栈.md
+++ b/Node2/从前端到全栈.md
@@ -377,3 +377,111 @@ wsServer.on('connection', curWs => {
 
 ------
 
+
+
+## 六、如何实现网页多标签通讯
+
+### 1. 使用 WebSocket
+
++ 无跨域限制
++ 需要服务端支持，成本高
+
+### 2. 通过 localStorage 通讯
+
++ **同域** 的 A 和 B 两个页面
+
++ A 页面设置 localStorage
+
++ B 页面可监听 localStorage 值的修改
+
+  ```js
+  window.addEventListener('storage', e => {
+    	console.log('key', e.key)
+    	console.log('value', e.newValue)
+  })
+  ```
+
+### 3. 通过 SharedWorker 通讯
+
++ SharedWorker 是 WebWorker 的一种
+
++ WebWorker 可开启 **子进程** 执行 JS ，但不能操作 DOM
+
++ SharedWorker 可单独开启一个进程，用于 **同域** 页面通讯
+
+  ```js
+  // worker.js
+  const set = new Set()
+  onconnect = event => {
+      const port = event.ports[0]
+      set.add(port)
+  
+      // 接收信息
+      port.onmessage = e => {
+          // 广播消息
+          set.forEach(p => {
+              if (p === port) return
+              p.postMessage(e.data)
+          })
+      }
+      // 发送信息
+      port.postMessage('worker.js done')
+  }
+  ```
+
+  ```js
+  // page detail
+  const worker = new SharedWorker('./worker.js')
+      const btn = document.getElementById('btn')
+      btn.addEventListener('click', () => {
+          console.log('clicked')
+          worker.port.postMessage('detail go...')
+   })
+  ```
+
+  ```js
+  // page list
+  const worker = new SharedWorker('./worker.js')
+  worker.port.onmessage = e => console.log('list', e.data)
+  ```
+
+### 4. 答案
+
++ WebSocket 需要服务端，成本高，但可以跨域
++ localStorage 简单易用，推荐
++ ShareWorker 调试不方便，不兼容 IE11
+
+### 5. ( 连环问 ) 网页和 iframe 如何通讯
+
++ 使用 PostMessage 通讯
+
++ 注意跨域的限制和判断
+
+  ```js
+  // index.html
+  const btn = document.getElementById('btn')
+  btn.addEventListener('click', () => {
+      console.log('index clicked')
+      window.iframe.contentWindow.postMessage('hello', '*')
+  })
+  window.addEventListener('message', ev => {
+      console.log('origin', ev.origin)  // 来源域名
+      console.log('index received', ev.data)
+  })
+  ```
+
+  ```js
+  // child.html
+  const btn = document.getElementById('btn')
+  btn.addEventListener('click', () => {
+      console.log('child clicked')
+      window.parent.postMessage('world', '*')
+  })
+  window.addEventListener('message', ev => {
+      console.log('origin', ev.origin)  // 来源域名
+      console.log('child received', ev.data)
+  })
+  ```
+
+------
+
