docs: 更新"从前端到全栈"文档, script 标签的 defer 和 async 有什么区别

--- a/Node2/从前端到全栈.md
+++ b/Node2/从前端到全栈.md
@@ -485,3 +485,63 @@ wsServer.on('connection', curWs => {
 
 ------
 
+
+
+## 七、script 标签的 defer 和 async 有什么区别
+
+### 1. 区别
+
+![image-20220324101914505](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220324101914505.png)
+
+### 2. 答案
+
++ 无：HTML 暂停解析，下载 JS ，执行 JS ，再继续解析 HTML
++ defer：HTML 继续解析，并行下载 JS ，HTML 解析完再执行 JS
++ async：HTML 继续解析，并行下载 JS ，执行 JS ，在解析 HTML
+
+### 3. ( 连环问 ) prefetch 和 dns-prefetch 区别
+
++ preload 和 prefetch
+
+  1. preload 资源在当前页面使用，会 **优先** 加载
+
+  2. prefetch 资源在未来页面使用，**空闲时** 加载
+
+     ```html
+     <head>
+         <!--    preload-->
+         <link rel="preload" href="style.css" as="style">
+         <link rel="preload" href="main.js" as="script">
+     
+         <!--    prefetch-->
+         <link rel="prefetch" href="other.js" as="script">
+     
+         <!--    引用 css-->
+         <link rel="stylesheet" href="style.css">
+     </head>
+     <body>
+         <!--    引用 js-->
+         <script src="main.js" defer></script>
+     </body>
+     ```
+
++ dns-prefetch 和 preconnet
+
+  1. dns-prefetch 即 DNS 预查询
+
+  2. preconnect 即 DNS 预连接
+
+     ```html
+     <head>
+       	<link rel="dns-prefetch" href="https://xxx.com">
+       	<link rel="preconnect" href="https://xxx.com" crossorigin>
+     </head>
+     ```
+
++ 答案
+
+  1. prefetch 是资源预获取（和 preload 相关）
+  2. dns-prefetch 是 DNS 预查询（和 preconnect 相关）
+
+------
+
