--- a/Node2/从前端到全栈.md
+++ b/Node2/从前端到全栈.md
@@ -565,3 +565,48 @@ wsServer.on('connection', curWs => {
 
 ------
 
+
+
+## 九、前端攻击手段有哪些
+
+### 1. XSS
+
++ Cross Site Script 跨站脚本攻击
++ 手段：黑客将 JS 代码插入到网页内容中，渲染时执行 JS 代码
++ 预防：特殊字符替换（前端或者后端）
+
+### 2. CSRF
+
++ Cross Site Request Forgery 跨站请求伪造
++ CSRF 详细过程
+  1. 用户登录了 A 网站，有了 cookie
+  2. 黑客诱导用户到 B 网站，并发起 A 网站的请求
+  3. A 网站的 API 发现有 cookie ，认为是用户自己操作的
++ CSRF 预防手段
+  1. 严格的跨域限制，如判断 referrer （请求来源）
+  2. 为 cookie 设置 SameSite ，禁止跨域传递 cookie
+  3. 关键接口使用短信验证码
+
+### 3. 点击劫持
+
++ Click Jacking
+
++ 手段：诱导界面上蒙一个透明的 iframe ，诱导用户点击
+
++ 预防：让 iframe 不能跨域加载
+
+  ![image-20220324153349191](https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/image-20220324153349191.png)
+
+### 4. DDos
+
++ Distribute denial-of-service 分布式拒绝服务
++ 手段：分布式的、大规模的流量访问，使服务器瘫痪
++ 预防：软件层不好做，需硬件预防（如阿里云 WAF）
+
+### 5. SQL 注入
+
++ 手段：黑客提交内容时写入 SQL 语句，破坏数据库
++ 预防：处理输入的内容，替换特殊字符
+
+------
+
