docs: 更新"从前端到全栈"文档, 描述 koa2 洋葱圈模型

--- a/Node2/从前端到全栈.md
+++ b/Node2/从前端到全栈.md
@@ -610,3 +610,43 @@ wsServer.on('connection', curWs => {
 
 ------
 
+
+
+## 十、描述 koa2 洋葱圈模型
+
+### 1. Koa2
+
++ 一个简约、流行的 nodejs 框架
+
++ 通过 **中间件** 组织代码
+
+  ```js
+  const Koa = require('koa');
+  const app = new Koa();
+  
+  // logger
+  app.use(async (ctx, next) => {
+    await next();  // 先执行下一步 x-response-time ，执行完再继续执行
+    const rt = ctx.response.get('X-Response-Time');
+    console.log(`${ctx.method} ${ctx.url} - ${rt}`);
+  });
+  
+  // x-response-time
+  app.use(async (ctx, next) => {
+    const start = Date.now();
+    await next();  // 先执行下一步 response ，执行完再继续执行
+    const ms = Date.now() - start;
+    ctx.set('X-Response-Time', `${ms}ms`);
+  });
+  
+  // response
+  app.use(async ctx => {
+    ctx.body = 'Hello World';
+  });
+  
+  app.listen(3000);
+  ```
+
++ 多个中间件以 “ 洋葱圈模型 ” 执行
+
+  <img src="https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/iShot2022-03-24%2016.16.39.jpg" alt="iShot2022-03-24 16.16.39" style="zoom: 50%;" />
