--- a/Node2/实际工作相关.md
+++ b/Node2/实际工作相关.md
@@ -72,3 +72,37 @@
 
 ------
 
+
+
+## 二、一次性返回 10w 条数据如何渲染
+
+### 1. 设计不合理
+
++ 后端返回 10w 条数据，本身技术方案设计就不合理
++ 主动沟通此事
+
+### 2. 浏览器能否处理 10w 条数据
+
++ JS 没问题
++ 渲染到 DOM 会非常卡顿
+
+### 3. 自定义中间层
+
++ 自定义 nodejs 中间层，获取并拆分这 10w 条数据
++ 前端对接 nodejs 中间层，而不是服务端
++ 成本比较高
+
+### 4. 虚拟列表
+
++ 只渲染可视区域 DOM
+
++ 其他隐藏区域不显示，只用 `<div>` 撑起高度
+
++ 随着浏览器滚动，创建和销毁 DOM
+
++ 虚拟列表实现起来非常复杂，可借用第三方 lib（ Vue-virtual-scroll-list React-virtualiszed ）
+
+  <img src="https://burt-markdown.oss-cn-shenzhen.aliyuncs.com/markdown/iShot2022-03-30_13.51.27.jpg" alt="iShot2022-03-30_13.51.27" style="zoom: 50%;" />
+
+------
+
