--- a/Node2/实际工作相关.md
+++ b/Node2/实际工作相关.md
@@ -106,3 +106,34 @@
 
 ------
 
+
+
+## 三、文字超出省略
+
+### 1. 单行文字
+
+```css
+#box1 {
+    border: 1px solid #ccc;
+    width: 100px;
+    white-space: nowrap; /* 不换行 */
+    overflow: hidden;
+    text-overflow: ellipsis; /* 超出省略 */
+}
+```
+
+### 2. 多行文字
+
+```css
+#box2 {
+    border: 1px solid #ccc;
+    width: 100px;
+    overflow: hidden;
+    display: -webkit-box; /* 将对象作为弹性伸缩盒子模型显示 */
+    -webkit-box-orient: vertical; /* 设置子元素排列方式 */
+    -webkit-line-clamp: 3; /* 显示几行，超出的省略 */
+}
+```
+
+------
+
